--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div>
         <p class="eyebrow">Nowa Reformacja • Symulator stołu</p>
         <h1>Graj przeciwko symulowanym graczom</h1>
-        <p class="lede">Karty i parametry pochodzą z materiałów projektu (folder <code>gametester/cards</code> i instrukcja <code>MANUAL_V3/INSTRv3.pdf</code>). Brak backendu — całość w czystym JavaScript.</p>
+        <p class="lede">Karty i parametry pochodzą z materiałów projektu (folder <code>gametester/cards</code> i instrukcja <code>MANUAL_V3/INSTRv3.pdf</code>).</p>
       </div>
       <div class="controls">
         <label>
@@ -27,7 +27,8 @@
           <input id="seedInput" type="text" placeholder="losowe">
         </label>
         <button id="newGameBtn">Nowa gra</button>
-        <a class="ghost" href="../MANUAL_V3/INSTRv3.pdf" target="_blank" rel="noreferrer">Instrukcja PDF</a>
+        <a class="ghost" href="https://github.com/blazejzet/nowareformacja_pl/tree/main/MANUAL_V3" target="_blank" rel="noreferrer">Instrukcja PDF</a>
+        <a class="ghost" href="https://github.com/blazejzet/nowareformacja_pl/" target="_blank" rel="noreferrer">Git Repo</a>
       </div>
     </header>
 
